# $Id$

2006-04-01	Konstantin V. Arkhipov

	* main/Containers/UnifiedContainer.class.php: API changed a bit -
	setListWithClones() -> replaceList(); once again refixed save logic.

	* meta/: support for OneToMany and ManyToMany relations implemented.

2006-03-30	Konstantin V. Arkhipov

	* main/Flow/ForbiddenCommand.class.php: bibb added.

2006-03-30	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: wrong index in list and
	clones fixed.

2006-03-27	Konstantin V. Arkhipov

	* core/Base/Creatable.class.php: new obvious interface introduced.

2006-03-26	Konstantin V. Arkhipov

	* doc/THANKS: for various suggestions, critics, patches, etc.

	* doc/AUTHORS: all email addresses moved to single file.

	* core/Exceptions/MissingElementException.class.php: closing
	exception's TODO item by removing abuse of ObjectNotFoundException
	mostly.

	* global.inc.php.tpl: throw exceptions on E_STRICT violations too.

	* main/Flow/Model.class.php: deprecated 'Var'-suffixed methods.

	* core/OSQL/QueryIdentification.class.php: now implements Stringable
	for debugging purposes.

	* core/Base/Singletone.class.php: dropped in the sake of sanity.

	* main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php,
	core/Cache/WatermarkedPeer.class.php: implemented ability to avoid
	project's namespace in-cache collisions by watermarking all cache'
	activity.

2006-03-13	Konstantin V. Arkhipov

	* meta/classes/: fixed indentation issues, now 100% compatible with
	our coding style standarts.

	* core/OSQL/DialectString.class.php: toString() renamed to
	toDialectString(), to avoid collision with Stringable interface.

2006-03-12	Konstantin V. Arkhipov

	* meta/: proto classes implementation finished.

	* core/Form/FormUtils.class.php: import/export utilities, extracted
	from Form.

	* core/Form/Form.class.php: ability to scope's cleanup dropped;
	method primitiveExist renamed to primitiveExists;

2006-03-09	Anton E. Lebedevich

	* main/Flow/: initial import.
